# CUDA-NN

./: .gitignore  CMakeLists.txt  README.md
include/: layer.h  linear.h  loss.h  network.h  optimizer.h  relu.h  shape.h  sigmoid.h  tensor.h
include/nn/: common.h  crossentropy.h  layer.h  mse.h  network.h  relu.h  sgd.h  sigmoid.h  softmax.h  tensor.h
src/: linear.cu  main.cu  mse.cu  network.cu  relu.cu  sgd.cu  shape.cpp  sigmoid.cu  tensor.cu
src/nn/: crossentropy.cu  linear.cu  mse.cu  network.cu  relu.cu  sgd.cu  shape.cpp  sigmoid.cu  softmax.cu  tensor.cu
